Reworked the way the input is filtered, in a more maintainable and flexible way (see details).
Hunspell now explicitely disables compound cmavo, as it supports it in as an affix rule.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ opera/README*
 firefox/dictionaries/
 firefox/license.txt
 wordlist_cache.html
+wordlist/**
+!wordlist/test*
+!wordlist/headall
+!wordlist/*.sed
 /*.dic
 /*.oxt
-
